<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/lightgray1"
    android:paddingBottom="@dimen/_20dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:padding="@dimen/_10dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_15dp"
            android:text="Need senior Rolling stock Technician"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
            android:id="@+id/tv_companyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/_15dp"
            android:text="@string/compname"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
            android:id="@+id/tv_vac_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_companyname"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/vac1"
            android:layout_marginLeft="@dimen/_15dp" />
        <TextView
            android:id="@+id/tv_vac_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_companyname"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/vac2"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/tv_vac_type1"/>
        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_vac_type1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/tv_year"
            android:layout_marginLeft="@dimen/_15dp" />
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_vac_type1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/tv_city"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/tv_year"/>
        <TextView
            android:id="@+id/tv_day_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_vac_type1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/day_ago"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/tv_city"/>
        <TextView
            android:id="@+id/tv_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_year"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/sal"
            android:layout_marginLeft="@dimen/_15dp" />
        <TextView
            android:id="@+id/tv_work_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_below="@id/tv_year"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/day"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/tv_salary"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_salary"
            android:textColor="@color/black"
            android:textSize="@dimen/_12dp"
            android:text="@string/u_msg"
            android:layout_marginLeft="@dimen/_15dp" />
        <TextView
            android:id="@+id/btn_request"
            android:layout_width="@dimen/_80dp"
            android:layout_height="25dp"
            android:text="@string/request"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/_12dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"/>
    </RelativeLayout>
</RelativeLayout>