<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/lightgray1"
    android:paddingBottom="@dimen/_20dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:padding="@dimen/_10dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@color/white">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="@dimen/_60dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginLeft="@dimen/_8dp"
            android:background="@drawable/circle_black"
            android:src="@drawable/company_profile" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15dp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/iv_user_profile"
            android:text="@string/profilename"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/tv_companyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="@dimen/_5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_toRightOf="@id/iv_user_profile"
            android:text="@string/compname"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_user_profile"
            android:paddingBottom="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp">
            <RelativeLayout
                android:id="@+id/rl_type_of_mach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_20dp"
                >
            <TextView
                android:id="@+id/type_of_mach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typ_of_mach"
                android:textColor="@color/gray"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/tv_type_of_mach"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/_5dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/type_of_mach"
                android:text="@string/tv_type_of_mach"
                android:textColor="#000"
                android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_vlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_type_of_mach"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/vaclocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vac_loaction"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_vil_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_faddre"
                    android:paddingRight="@dimen/_5dp"
                    android:layout_marginLeft="92dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_toRightOf="@id/vaclocation"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <TextView
                android:id="@+id/categoru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categopry"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/rl_vlocation"
                android:textColor="@color/gray"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_categopry"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/_5dp"
                android:layout_toRightOf="@id/categoru"
                android:layout_below="@id/rl_vlocation"
                android:layout_marginLeft="@dimen/_90dp"
                android:paddingLeft="@dimen/_5dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_cat"
                android:textColor="#000"
                android:textSize="14dp" />
            <RelativeLayout
                android:id="@+id/rl_subcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categoru"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/subcategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_category"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp"  />

                <TextView
                    android:id="@+id/tv_subcategory"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/_5dp"
                    android:paddingLeft="@dimen/_3dp"
                    android:layout_toRightOf="@+id/subcategory"
                    android:layout_marginLeft="67dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_subcat"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_job_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_subcategory"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/job_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_open"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp"  />

                <TextView
                    android:id="@+id/tv_job_open"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/_5dp"
                    android:layout_marginLeft="65dp"
                    android:paddingLeft="@dimen/_3dp"
                    android:layout_toRightOf="@+id/job_open"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_approx_sal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_job_open"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/approx_sal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approx_sal"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp"  />

                <TextView
                    android:id="@+id/tv_approx_sal"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/_5dp"
                    android:layout_marginLeft="65dp"
                    android:layout_toRightOf="@+id/approx_sal"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_app_sal"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_salary_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_approx_sal"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/salary_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary_time"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp"  />

                <TextView
                    android:id="@+id/tv_salary_time"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/_5dp"
                    android:layout_marginLeft="82dp"
                    android:layout_toRightOf="@+id/salary_time"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sal_time"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_pwork_shift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_salary_time"
                android:layout_marginLeft="@dimen/_20dp"
                >
                <TextView
                    android:id="@+id/work_shift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_shift"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"
                    android:textSize="14dp"  />

                <TextView
                    android:id="@+id/tv_work_shift"
                    android:layout_width="wrap_content"
                    android:paddingRight="@dimen/_5dp"
                    android:layout_marginLeft="@dimen/_70dp"
                    android:layout_toRightOf="@+id/work_shift"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_work_shift1"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_below="@+id/rl_pwork_shift">
                 <Button
                    android:id="@+id/btn_pending"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/button_gray_background"
                     android:layout_alignParentLeft="true"
                    android:text="@string/pending"
                    android:textColor="@color/Gray"
                    android:textSize="@dimen/_15dp" />
                <Button
                    android:id="@+id/btn_rejected"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/button_gray_background"
                    android:layout_alignParentLeft="true"
                    android:text="@string/rejected"
                    android:visibility="gone"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_15dp" />
                <Button
                    android:id="@+id/btn_accepted"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/button_gray_background"
                    android:layout_alignParentLeft="true"
                    android:visibility="gone"
                    android:text="@string/accepted"
                    android:textColor="@color/Green"
                    android:textSize="@dimen/_15dp" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_40dp"
                android:layout_toRightOf="@id/btn_rejected"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_15dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>