<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContactUsFragment">
    <RelativeLayout
        android:id="@+id/rl_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgray1">
        <TextView
            android:id="@+id/contact_us"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/cont_us"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:id="@+id/rl_contactus"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_below="@id/contact_us"
            android:padding="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:hint="@string/name1"
                android:background="@drawable/edittext_corner"
                android:layout_marginTop="@dimen/_7dp"
                android:padding="@dimen/_10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sp" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:hint="@string/phone"
                android:background="@drawable/edittext_corner"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_10dp"
                android:layout_below="@id/et_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sp" />
            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100dp"
                android:hint="@string/message"
                android:background="@drawable/edittext_corner"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_10dp"
                android:gravity="start"
                android:layout_below="@id/et_phone"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sp" />
            <Button
                android:id="@+id/tv_login"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_35dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_18dp"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:layout_below="@id/et_message"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>